package com.projet_warriors.potions;

public class PotionStandard extends Potion{

    public PotionStandard() {
        super.nom="potion de vie standard";
        super.viePoints = 2;
    }
}
