@startuml

title __POTIONS's Class Diagram__\n

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.Potion {
          # nom : String
          # viePoints : int
          + Potion()
          + getNom()
          + getViePoints()
          + interact()
          + setNom()
          + setViePoints()
          + toString()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.PotionGrande {
          + PotionGrande()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.PotionStandard {
          + PotionStandard()
      }
    }
  }
  

  com.projet_warriors.potions.Potion .up.|> com.projet_warriors.Case
  com.projet_warriors.potions.PotionGrande -up-|> com.projet_warriors.potions.Potion
  com.projet_warriors.potions.PotionStandard -up-|> com.projet_warriors.potions.Potion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
